- poEdit now preserves non-standard entries in PO file header
- poEdit now respects c-format and no-c-format when checking tokens correctness
- position in translations list is no longer lost when saving the file
- configure now correctly detects libdb4 with versioned symbols
- "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
- use msgfmt for tokens validation
- added more translations:
     Punjabi (Amanpreet Singh Alam)
     Albanian (Besnik Bleta)
     Amharic (Tegegne Tefera)
     Hindi (Dhananjaya Sharma)
     Esperanto (Tim Morley)
     Belarusian (Siarhei)
     Breton (Korvigellou an Drouizig)
     Walloon (Pablo Saratxaga)
     Bangla (Omi Azad)
     Basque (3ARRANO Euskalgintza Taldea)


Version 1.2.5
-------------

- added catalog export to HTML (Christophe Hermier)
- fixed bug in displaying list entries in ANSI build introduced in 1.2.4
- fixed opening of source files specified using absolute path
- poEdit now preserves fuzzy status if set after partially editing an entry
- many fixes to comment window (Olivier Sannier)
- comment window is now (optionally) editable (Olivier Sannier)
- fixed preferences dialog if translation memory is not used (Olivier Sannier)
- added printf() tokens validation (Frederic Giudicelli)
  (requires wxWindows >= 2.5.1 in Unicode build)
- added ability to specify source code charset other than US-ASCII
  (based on patch by Stefan Kowski)
- added Mongolian translation (Mendbayar Bayar, Khurelbaatar Lkhagvasuren)


Version 1.2.4
-------------

- added optional comment window to the bottom of main screen
  (based on patch by Olivier Sannier, still not fully functional)
- added "Automatically translate using TM" operation to the Catalog menu
- [Win32] upgraded bundled gettext to 0.12.1
- fixed .po files parser to read files created by xgettext -i
- added ability to customize fonts
- [Win32] added support for Delphi via dxgettext (http://dybdahl.dk/dxgettext/)