@@ -13,6 +13,7 @@ Version 1.3.0
 - configure now correctly detects libdb4 with versioned symbols
 - "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
 - use msgfmt for tokens validation
+- double-clicking on invalid entry now pops up error description
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
